wrapper fix on mobile mode

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,10 @@
 }
 
 body.category_page {
+	.wrapper-fulid {
+	
+	}
+
 	.product-list-title {
 		margin-bottom: 50px;
 	}
